01-keda-for-cronjob/02-myapp4-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp4-service
spec:
  type: ClusterIP # ClusterIP, # NodePort # LoadBalancer
  selector:
    app: myapp4
  ports:
  - name: http
    port: 80 # Service Port
    targetPort: 80 # Container Port
