01-keda-for-cronjob/04-myapp4-gateway-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-external-global-http-staticip
spec:
  parentRefs:
  - kind: Gateway
    name: mygateway1-global-staticip
  rules:
  - backendRefs:
    - name: myapp4-service
      port: 80
